# CFR-Atlas

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/cfr-atlas-backend-ref/: Cargo.toml
crates/cfr-atlas-backend-ref/src/: lib.rs
crates/cfr-atlas-backend-ref/tests/: conformance.rs
docs/: ADAPTERS.md  ARCHITECTURE.md  CLAIMS.md  GLOSSARY.md  MATH.md  NO_STD.md  ROADMAP.md  STABILIZATION.md
examples/: bench_cfr.rs  bench_matrix.rs  long_context_validation.rs  reference_backend.rs  stabilization_report.rs  toy_cpu.rs
fuzz/: Cargo.toml  README.md
fuzz/targets/: config_page_validation.rs
scripts/: release_manifest.sh  run_config_fuzz.sh  sign_release_artifacts.sh  supply_chain_check.sh
src/: atlas.rs  attention.rs  bench.rs  cache.rs  config.rs  conformance.rs  dtype.rs  error.rs  executor.rs  kernel.rs  layout.rs  lib.rs  page.rs  pipeline.rs  policy.rs  position.rs  regenerator.rs  schema.rs  stabilization.rs  stats.rs  token.rs  topology.rs  tuning.rs  validation.rs
tests/: adapter_core.rs  exactness.rs  long_context_validation.rs  performance.rs  property_invariants.rs  stabilization.rs
